# LLMOps-Financial-Planner

./: .gitignore  README.md
.cursor/plans/: fix_dashboard_data_sync_issues_4ff8b9ec.plan.md
.github/workflows/: local-evals.yml
assets/: README.md
backend/: README.md  check_db.py  check_job_details.py  deploy_all_lambdas.py  package_docker.py  test_full.py  test_multiple_accounts.py  test_scale.py  test_simple.py  watch_agents.py
backend/api/: README.md  lambda_handler.py  main.py  package_docker.py
backend/charter/: README.md  agent.py  eval_local.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
backend/database/: README.md  reset_db.py  run_migrations.py  seed_data.py  test_data_api.py  verify_database.py
backend/evals/: README.md  run_local.py
backend/ingest/: README.md  cleanup_s3vectors.py  ingest_s3vectors.py  package.py  search_s3vectors.py  test_ingest_s3vectors.py  test_search_s3vectors.py
backend/planner/: README.md  agent.py  eval_local.py  lambda_handler.py  market.py  observability.py  package_docker.py  prices.py  templates.py  test_full.py  test_market.py  test_simple.py
backend/rebalancer/: __init__.py  (+1 more)
backend/reporter/: README.md  agent.py  judge.py  lambda_handler.py  observability.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
frontend/: .gitignore  README.md
guides/: 1_permissions.md
scripts/: README.md  deploy.py  deploy_stacks.py  destroy.py  destroy_stacks.py  run_local.py
terraform/: README.md  pyproject.toml
(+83 files in other folders)
