[project]
name = "reporter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alex-database",
    "langfuse>=3.3.4",
    "logfire[httpx]>=4.7.0",
    "openai-agents[litellm]>=0.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
]

[tool.uv.sources]
alex-database = { path = "../database", editable = true }
